fix: room-carousel:hover make room-carousel__buttons visible

--- a/src/components/room-carousel/room-carousel.scss
+++ b/src/components/room-carousel/room-carousel.scss
@@ -104,10 +104,10 @@
     display: none;
     width: 100%;
     height: 100%;
+  }
 
-    &:hover {
-      display: flex;
-    }
+  &:hover &__buttons {
+    display: flex;
   }
 
   &__button {
